--- a/sistemajava/css/style.css
+++ b/sistemajava/css/style.css
@@ -54,7 +54,7 @@ header{
 }
 .header{
 	color: #FFF;
-	background: #0a4661;
+	background: #FF33FF;
 	height: 35px;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -100,7 +100,7 @@ header{
 }
 nav ul{
 	background: #058167;
-	/*background: #05817d;*/
+	background: #05817d;
 	list-style: none;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -125,7 +125,7 @@ nav a{
 	border-right: 1px solid #319B8F;
 }
 nav .principal > a{
-    background: url(../images/arrow_bottom.png) no-repeat;
+   background: url(../images/arrow_bottom.png) no-repeat;
     background-position-x: 0%;
     background-position-y: 0%;
     background-size: auto auto;
@@ -136,7 +136,7 @@ nav ul li:hover ul{
 	display: block;
 }
 nav li ul{
-	/*background: #177470;*/
+	background: #177470;
 	background: #2d9872;
 	display: none;
 	flex-direction: column;
@@ -150,7 +150,7 @@ nav li ul a{
 	border-right: initial;
 }
 nav li ul a:hover{
-	/*background: #2c9595;*/
+	background: #2c9595;
 	background: #147556;
 }
 nav li ul li:last-child{
@@ -160,7 +160,7 @@ nav li ul li:last-child{
 #container{
 	padding: 90px 15px 15px;
 }
-/*****************************************************************/
+/*************************registro usuario****************************************/
 .from_register{
 	width: 450px;
 	margin: auto;/*centreado*/
@@ -170,7 +170,7 @@ nav li ul li:last-child{
 }
 hr{
 	border: 0;
-	background: #ccc;
+	background: #CCC;
 	height: 1px;
 	margin: 10px 0;
 	display: block;
@@ -194,5 +194,63 @@ input,select{
 	padding: 5px;
 	border: 1px solid #85929e;
 	border-radius: 5px;
-
+}
+.btn_save{
+	font-size: 12pt;
+	background: #12a4c6;
+	padding: 10px;
+	color: #FFF;
+	letter-spacing: 1px;
+	border:0;
+	cursor: pointer;
+	margin: 15px auto;
+}
+.alert{
+	width: 100%;
+	background: #66e07d66;
+	border-radius: 6px;
+	margin: 20px auto;
+}	
+.msg_save{
+	color: #126e00;
+}
+.alert p{
+	padding: 10px;
+}
+/*============listausuario=========*/
+#container h1{
+	font-size: 35px;
+	display: inline-block;
+}
+.btn_new{
+	display: inline-block;
+	background: #239baa;
+	color: #FFF;
+	padding: 5px 25px;
+	border-radius: 4px;
+	margin: 20px;
+}
+table{
+	border-collapse: collapse;
+	font-size: 12pt;
+	font-family: 'arial';
+	width: 100%;
+}
+table th{
+	text-align: left;
+	padding: 10px;
+	background: #3d7ba8;
+	color: #FFF;
+}
+table tr:nth-child(odd){
+	background: #FFF;
+}
+table td{
+	padding: 10px;
+}
+.link_edit{
+	color: #0ca4ce;
+}
+.link_elim{
+	color: #f26b6b;
 }
