--- a/sistemajava/css/style.css
+++ b/sistemajava/css/style.css
@@ -1,6 +1,6 @@
-@import url(../fonts/GothamBook.css);
-@import url(../fonts/GothamBold.css);
-*{
+/@import url(fonts/GothamBook.css);
+@import url(fonts/GothamBold.css);
+{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -54,7 +54,7 @@ header{
 }
 .header{
 	color: #FFF;
-	background: #FF33FF;
+	background: #0a4661;
 	height: 35px;
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -125,7 +125,7 @@ nav a{
 	border-right: 1px solid #319B8F;
 }
 nav .principal > a{
-   background: url(../images/arrow_bottom.png) no-repeat;
+   background: url(../img/arrow_bottom.png) no-repeat;
     background-position-x: 0%;
     background-position-y: 0%;
     background-size: auto auto;
@@ -161,9 +161,9 @@ nav li ul li:last-child{
 	padding: 90px 15px 15px;
 }
 /*************************registro usuario****************************************/
-.from_register{
+	.from_register{
 	width: 450px;
-	margin: auto;/*centreado*/
+	margin: auto;
 }
 .from_register h1{
 	color: #3c93b0;
@@ -210,6 +210,9 @@ input,select{
 	background: #66e07d66;
 	border-radius: 6px;
 	margin: 20px auto;
+}
+.msg_error{
+	color: #e65656;
 }	
 .msg_save{
 	color: #126e00;
